Update repo url

--- a/templates/jenkins/blogr-build-job.xml.erb
+++ b/templates/jenkins/blogr-build-job.xml.erb
@@ -28,13 +28,13 @@
       <jenkins.branch.BranchSource>
         <source class="jenkins.plugins.git.GitSCMSource" plugin="git@3.0.0">
           <id>2d250844-bb92-4635-b2cc-2aee074bc4b1</id>
-          <remote>https://www.github.com/dniel/blogr-pve</remote>
+          <remote>https://www.github.com/dniel/blogr-workshop</remote>
           <credentialsId></credentialsId>
           <includes>*</includes>
           <excludes></excludes>
           <ignoreOnPushNotifications>false</ignoreOnPushNotifications>
           <browser class="hudson.plugins.git.browser.GithubWeb">
-            <url>https://www.github.com/dniel/blogr-pve</url>
+            <url>https://www.github.com/dniel/blogr-workshop</url>
           </browser>
         </source>
         <strategy class="jenkins.branch.DefaultBranchPropertyStrategy">
