--- a/templates/jenkins/blogr-pve-job.xml.erb
+++ b/templates/jenkins/blogr-pve-job.xml.erb
@@ -4,28 +4,13 @@
   <description>Run puppet apply on all nodes</description>
   <keepDependencies>false</keepDependencies>
   <properties>
-    <hudson.model.ParametersDefinitionProperty>
-      <parameterDefinitions>
-        <hudson.model.TextParameterDefinition>
-          <name>servers</name>
-          <description>Each server to update on its own line</description>
-          <defaultValue>front-1.dragon.lan
-front-2.dragon.lan
-db-1.dragon.lan
-db-2.dragon.lan
-app-1.dragon.lan
-app-2.dragon.lan
-app-3.dragon.lan
-app-4.dragon.lan
-ci-1.dragon.lan
-login-1.dragon.lan
-logger-1.dragon.lan</defaultValue>
-        </hudson.model.TextParameterDefinition>
-      </parameterDefinitions>
-    </hudson.model.ParametersDefinitionProperty>
     <org.jenkinsci.plugins.workflow.job.properties.DisableConcurrentBuildsJobProperty/>
     <org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
-      <triggers/>
+      <triggers>
+        <hudson.triggers.TimerTrigger>
+          <spec>H H/2 * * 1-7</spec>
+        </hudson.triggers.TimerTrigger>
+      </triggers>
     </org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
   </properties>
   <definition class="org.jenkinsci.plugins.workflow.cps.CpsScmFlowDefinition" plugin="workflow-cps@2.21">
