updated build job with periodic update

--- a/templates/jenkins/blogr-pve-job.xml.erb
+++ b/templates/jenkins/blogr-pve-job.xml.erb
@@ -1,5 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<flow-definition plugin="workflow-job@2.7">
+<?xml version="1.0" encoding="UTF-8"?><flow-definition plugin="workflow-job@2.7">
   <actions/>
   <description>Run puppet apply on all nodes</description>
   <keepDependencies>false</keepDependencies>
