update github repo url to ssh

--- a/templates/jenkins/blogr-build-job.xml.erb
+++ b/templates/jenkins/blogr-build-job.xml.erb
@@ -37,7 +37,7 @@
       <jenkins.branch.BranchSource>
         <source class="jenkins.plugins.git.GitSCMSource" plugin="git@3.0.0">
           <id>2d250844-bb92-4635-b2cc-2aee074bc4b1</id>
-          <remote>https://www.github.com/dniel/blogr-workshop</remote>
+          <remote>git@github.com:dniel/blogr-workshop.git</remote>
           <credentialsId></credentialsId>
           <includes>*</includes>
           <excludes></excludes>
