add missing config parts

--- a/templates/traefik/traefik.toml.erb
+++ b/templates/traefik/traefik.toml.erb
@@ -1,12 +1,9 @@
-################################################################
-            # Global configuration
-            ################################################################
-            traefikLogsFile = "/var/log/traefik/traefik.log"
-            accessLogsFile = "/var/log/traefik/access.log"
+[consul]
+endpoint = "127.0.0.1:8500"
 
-            [consulCatalog]
-            endpoint = "127.0.0.1:8500"
-            domain = "dragon.lan"
-            prefix = "traefik"
-            constraints = ["tag==prod"]
-            watch = true
+[consulCatalog]
+endpoint = "127.0.0.1:8500"
+domain = "dragon.lan"
+prefix = "traefik"
+constraints = ["tag==prod"]
+watch = true
