move init script for blogr restapi node app to templates, so that we can set NODE_ENV to the same as puppet env for toggling between environment config in the node app.

--- a/templates/blogr/node-app.erb
+++ b/templates/blogr/node-app.erb
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 USER="jenkins"
-NODE_ENV="production"
+NODE_ENV="<%=@environment%>"
 PORT="3000"
 APP_DIR="/opt/blogr/latest/server"
 NODE_APP="dist/server.js"
