run build jobs randomly once a day

--- a/templates/jenkins/blogr-build-job.xml.erb
+++ b/templates/jenkins/blogr-build-job.xml.erb
@@ -21,7 +21,7 @@
   </orphanedItemStrategy>
   <triggers>
     <com.cloudbees.hudson.plugins.folder.computed.PeriodicFolderTrigger plugin="cloudbees-folder@6.0.2">
-      <spec>*/12 * * * *</spec>
+      <spec>H H * * *</spec>
       <interval>300000</interval>
     </com.cloudbees.hudson.plugins.folder.computed.PeriodicFolderTrigger>
   </triggers>
