--- a/templates/jenkins/blogr-pve-job.xml.erb
+++ b/templates/jenkins/blogr-pve-job.xml.erb
@@ -7,7 +7,7 @@
     <org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
       <triggers>
         <hudson.triggers.TimerTrigger>
-          <spec>H H/12 * * 1-7</spec>
+          <spec>H H * * *</spec>
         </hudson.triggers.TimerTrigger>
       </triggers>
     </org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
