--- a/templates/traefik/traefik.toml.erb
+++ b/templates/traefik/traefik.toml.erb
@@ -8,3 +8,10 @@ domain = "dragon.lan"
 prefix = "traefik"
 constraints = ["tag==<%=@environment%>"]
 watch = true
+
+[rancher]
+domain = "dragon.lan"
+prefix = "traefik"
+Watch = true
+ExposedByDefault = false
+Endpoint = "http://p-rancher-01.dragon.lan"
