update rancher endpoint url for traefik

--- a/templates/traefik/traefik.toml.erb
+++ b/templates/traefik/traefik.toml.erb
@@ -14,4 +14,4 @@ domain = "dragon.lan"
 prefix = "traefik"
 Watch = true
 ExposedByDefault = false
-Endpoint = "http://p-rancher-01.dragon.lan"
+Endpoint = "http://rancher.service.consul:8080"
