parse access logg from traefik access as apache format

--- a/templates/logstash/config.erb
+++ b/templates/logstash/config.erb
@@ -12,6 +12,11 @@
     }
   }
   filter {
+    if [type] == "traefik_access" {
+      grok {
+          match => { "message" => "%{COMBINEDAPACHELOG}" }
+      }
+    }
     if [type] == "blogr" {
       grok {
           match => { "message" => "%{COMBINEDAPACHELOG}" }
