--- a/templates/traefik/traefik.toml.erb
+++ b/templates/traefik/traefik.toml.erb
@@ -15,3 +15,6 @@ prefix = "traefik"
 Watch = true
 ExposedByDefault = false
 Endpoint = "http://rancher.service.consul:8080"
+
+[web.metrics.prometheus]
+buckets=[0.1,0.3,1.2,5]
