--- a/templates/jenkins/puppet-apply-job.xml.erb
+++ b/templates/jenkins/puppet-apply-job.xml.erb
@@ -7,7 +7,7 @@
     <org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
       <triggers>
         <hudson.triggers.TimerTrigger>
-          <spec>H H * * *</spec>
+          <spec>@daily</spec>
         </hudson.triggers.TimerTrigger>
       </triggers>
     </org.jenkinsci.plugins.workflow.job.properties.PipelineTriggersJobProperty>
