disable rancher service discovery until problem with containers exposed with wrong ip is solved.

--- a/templates/traefik/traefik.toml.erb
+++ b/templates/traefik/traefik.toml.erb
@@ -9,9 +9,10 @@ prefix = "traefik"
 constraints = ["tag==<%=@environment%>"]
 watch = true
 
-[rancher]
-domain = "dragon.lan"
-prefix = "traefik"
-Watch = true
-ExposedByDefault = false
-Endpoint = "http://rancher.service.consul:8080"
+#[rancher]
+#domain = "dragon.lan"
+#prefix = "traefik"
+#Watch = true
+#ExposedByDefault = false
+#Endpoint = "http://rancher.service.consul:8080"
+# filename = "rancher.tmpl"
