--- a/templates/logstash/config.erb
+++ b/templates/logstash/config.erb
@@ -9,9 +9,11 @@
     }
     beats {
       port => 5044
+      type => beats
     }
     gelf {
       port => 12201
+      type => gelf
     }
   }
   filter {
