--- a/templates/logstash/config.erb
+++ b/templates/logstash/config.erb
@@ -37,8 +37,23 @@
         match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
       }
     }
-  }
 
+    if [type] == "kube-logs" {
+        mutate {
+          rename => ["log", "message"]
+        }
+
+        date {
+          match => ["time", "ISO8601"]
+          remove_field => ["time"]
+        }
+
+        grok {
+            match => { "source" => "/var/log/containers/%{DATA:pod_name}_%{DATA:namespace}_%{GREEDYDATA:container_name}-%{DATA:container_id}.log" }
+            remove_field => ["source"]
+        }
+    }
+  }
   output {
     elasticsearch {
       hosts => "localhost:9200"
